# monzo-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  glama.json  pyproject.toml
.github/workflows/: ci.yml
scripts/: check-no-data.sh
src/: main.py
src/monzo_mcp/: api.py  auth.py  config.py  db.py  helpers.py  mcp_instance.py
src/monzo_mcp/tools/: account_tools.py  analysis_tools.py  transaction_tools.py
tests/: test_cli.py  test_db.py  test_helpers.py  test_spending.py
